# tgcrm

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.stage  Makefile  README.md  SECURITY.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: ci.yml
src/tgcrm/: __init__.py  config.py  logging.py
src/tgcrm/bot/: __init__.py  bot_factory.py  main.py  menu.py  nlu_parser.py  states.py
src/tgcrm/bot/handlers/: __init__.py  assistant.py  client.py  deal.py  reminder.py  settings.py  start.py  supervisor.py
src/tgcrm/bot/keyboards/: main.py
src/tgcrm/bot/utils/: history.py
src/tgcrm/db/: __init__.py  init.py  manage.py  models.py  session.py  statuses.py
src/tgcrm/services/: __init__.py  ai.py  ai_assistant.py  deals.py  notifications.py  pdf_processing.py  phones.py  settings.py
src/tgcrm/tasks/: __init__.py  celery_app.py  reminders.py
tests/: conftest.py  test_bot_startup.py  test_domain_smoke.py  test_smoke.py
