[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tgcrm"
version = "0.1.0"
description = "Telegram CRM bot with AI assistant"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Company", email = "dev@example.com"}
]
dependencies = [
    "aiogram>=3.2.0",
    "SQLAlchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.12.0",
    "pydantic>=1.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "PyMuPDF>=1.23.0",
    "pytesseract>=0.3.10",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "tenacity>=8.0.0",
    "Pillow>=10.0.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
    "pytest>=7.4.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
